fix:modal edit out of box

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ main {
 }
 
 .box-main-body {
-    position: block;
+    position: relative;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border-top-right-radius: 10px;
